--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
 
     <header>
-        <h1>Hier Haupttitel einfügen</h1>
+        <h1>Willkommen auf meiner Webseite</h1>
     </header>
 
     <main>
-        <h2>Hier Untertitel</h2>
-        <p>Hier kommt dein Text.</p>
+        <h2>Papa</h2>
+        <p>Bitte Akzeptieren Sie die AGBs.</p>
+    
+
         <img src="bild.jpg" alt="Produktbild"><!-- Bilddatei ersetzen -->
         <a href="produkt.html">zur Produktseite</a>
     </main>
