--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -9,25 +8,24 @@
 </head>
 <body>
 
-    <header>
-        <h1>Willkommen auf meiner Webseite</h1>
-    </header>
+<header>
+    <h1>Willkommen auf meiner Webseite</h1>
+</header>
 
-    <main>
-        <h2>Papa</h2>
-        <p>Bitte Akzeptieren Sie die AGBs.</p>
-    
+<main>
+    <p>Bitte akzeptieren Sie die AGB.</p>
 
-        <img src="bild.jpg" alt="Produktbild"><!-- Bilddatei ersetzen -->
-        <a href="produkt.html">zur Produktseite</a>
-    </main>
+    <img src="hintergrund.jpg.jpg" alt="Produktbild"><br>
+    <a href="produkt.html">zur Produktseite</a>
+</main>
 
-    <footer>
-        <label>
-            <input type="checkbox" id="agbCheck"> Ich akzeptiere die AGB
-        </label>
-        <button onclick="checkAGB()">Weiter</button>
-    </footer>
+<footer>
+    <label>
+        <input type="checkbox" id="agbCheck">
+        Ich akzeptiere die AGB
+    </label>
+    <button onclick="checkAGB()">Weiter</button>
+</footer>
 
 </body>
 </html>
