--- a/index.html
+++ b/index.html
@@ -29,3 +29,15 @@
 
 </body>
 </html>
+<main>
+  <h1>Willkommen auf meiner Webseite</h1>
+  <p>Bitte akzeptieren Sie die AGB.</p>
+  <a href="produkt.html">zur Produktseite</a><br><br>
+
+  <label>
+    <input type="checkbox" id="agbCheck"> Ich akzeptiere die AGB
+  </label><br>
+  <button onclick="checkAGB()">Weiter</button><br><br>
+
+  <a href="agb.html" target="_blank">AGB lesen</a>
+</main>
