--- a/agb.html
+++ b/agb.html
@@ -6,56 +6,49 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Allgemeine Geschäftsbedingungen (AGB)</h1>
+  <main>
+    <h1>Allgemeine Geschäftsbedingungen (AGB)</h1>
 
-  <p>
-   <h1>Allgemeine Geschäftsbedingungen (AGB)</h1>
+    <h2>1. Geltungsbereich</h2>
+    <p>Diese Allgemeinen Geschäftsbedingungen gelten für alle Bestellungen, die Verbraucher über unseren Online-Shop tätigen.</p>
 
-<h2>1. Geltungsbereich</h2>
-Diese Allgemeinen Geschäftsbedingungen gelten für alle Bestellungen, die Verbraucher über unseren Online-Shop tätigen.
+    <h2>2. Vertragspartner</h2>
+    <p>Der Kaufvertrag kommt zustande mit:<br>
+    [Dein vollständiger Name oder Firmenname]<br>
+    [Deine Adresse]<br>
+    [Deine E-Mail-Adresse oder Telefonnummer]</p>
 
-<h2>2. Vertragspartner</h2>
-Der Kaufvertrag kommt zustande mit:
-[Dein vollständiger Name oder Firmenname] 
-[Deine Adresse] 
-[Deine E-Mail-Adresse oder Telefonnummer]
+    <h2>3. Vertragsabschluss</h2>
+    <p>Die Darstellung der Produkte im Online-Shop stellt kein rechtlich bindendes Angebot dar, sondern eine Aufforderung zur Bestellung.
+    Durch Anklicken des Bestellbuttons geben Sie ein verbindliches Angebot zum Kauf der im Warenkorb enthaltenen Waren ab.</p>
 
-<h2>3. Vertragsabschluss</h2>
-Die Darstellung der Produkte im Online-Shop stellt kein rechtlich bindendes Angebot dar, sondern eine Aufforderung zur Bestellung. 
-Durch Anklicken des Bestellbuttons geben Sie ein verbindliches Angebot zum Kauf der im Warenkorb enthaltenen Waren ab.
+    <h2>4. Widerrufsrecht</h2>
+    <p>Verbraucher haben ein vierzehntägiges Widerrufsrecht.</p>
 
-<h2>4. Widerrufsrecht</h2>
-Verbraucher haben ein vierzehntägiges Widerrufsrecht. 
-Eine ausführliche Widerrufsbelehrung finden Sie auf unserer Widerrufsseite.
+    <h2>5. Preise und Versandkosten</h2>
+    <p>Alle Preise enthalten die gesetzliche Mehrwertsteuer. Zuzüglich können Versandkosten anfallen.</p>
 
-<h2>5. Preise und Versandkosten</h2>
-Alle Preise enthalten die gesetzliche Mehrwertsteuer. 
-Zuzüglich können Versandkosten anfallen, die in der jeweiligen Produktbeschreibung ausgewiesen sind.
+    <h2>6. Lieferung</h2>
+    <p>Die Lieferung erfolgt innerhalb Deutschlands mit z. B. DHL, Hermes. Die Lieferzeit beträgt in der Regel 3–5 Werktage.</p>
 
-<h2>6. Lieferung</h2>
-Die Lieferung erfolgt innerhalb Deutschlands mit [z. B. DHL, Hermes]. 
-Die Lieferzeit beträgt in der Regel 3–5 Werktage.
+    <h2>7. Zahlung</h2>
+    <p>Die Zahlung erfolgt per Vorkasse, PayPal oder Kreditkarte.</p>
 
-<h2>7. Zahlung</h2>
-Die Zahlung erfolgt per Vorkasse, PayPal oder Kreditkarte. Weitere Zahlungsarten werden ggf. im Bestellvorgang angeboten.
+    <h2>8. Eigentumsvorbehalt</h2>
+    <p>Die Ware bleibt bis zur vollständigen Bezahlung unser Eigentum.</p>
 
-<h2>8. Eigentumsvorbehalt</h2>
-Die Ware bleibt bis zur vollständigen Bezahlung unser Eigentum.
+    <h2>9. Gewährleistung</h2>
+    <p>Es gelten die gesetzlichen Gewährleistungsrechte.</p>
 
-<h2>9. Gewährleistung</h2>
-Es gelten die gesetzlichen Gewährleistungsrechte.
+    <h2>10. Streitbeilegung</h2>
+    <p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:<br>
+    <a href="https://ec.europa.eu/consumers/odr" target="_blank">https://ec.europa.eu/consumers/odr</a></p>
 
-<h2>10. Streitbeilegung</h2>
-Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: 
-<a href="https://ec.europa.eu/consumers/odr" target="_blank">https://ec.europa.eu/consumers/odr</a> 
-Unsere E-Mail-Adresse lautet: [Deine E-Mail-Adresse]
+    <h2>11. Vertragssprache</h2>
+    <p>Die Vertragssprache ist Deutsch.</p>
 
-<h2>11. Vertragssprache</h2>
-Die Vertragssprache ist Deutsch.
-  </p>
-
-  <p>
+    <br>
     <a href="index.html">Zurück zur Startseite</a>
-  </p>
+  </main>
 </body>
 </html>
