--- a/agb.html
+++ b/agb.html
@@ -14,9 +14,9 @@
 
     <h2>2. Vertragspartner</h2>
     <p>Der Kaufvertrag kommt zustande mit:<br>
-    [Dein vollständiger Name oder Firmenname]<br>
-    [Deine Adresse]<br>
-    [Deine E-Mail-Adresse oder Telefonnummer]</p>
+    [Richi]<br>
+    
+  
 
     <h2>3. Vertragsabschluss</h2>
     <p>Die Darstellung der Produkte im Online-Shop stellt kein rechtlich bindendes Angebot dar, sondern eine Aufforderung zur Bestellung.
