--- a/agb.html
+++ b/agb.html
@@ -10,7 +10,7 @@
     <h1>Allgemeine Geschäftsbedingungen (AGB)</h1>
 
     <h2>1. Geltungsbereich</h2>
-    <p>Diese Allgemeinen Geschäftsbedingungen gelten für alle Bestellungen, die Verbraucher über unseren Online-Shop tätigen.Sie ackzeptiren hirmit das sie 5mal Ja sagen Müsen</p>
+    <p>Diese Allgemeinen Geschäftsbedingungen gelten für alle Bestellungen, die Verbraucher über unseren Online-Shop tätigen.Sie ackzeptiren hirmit das sie 5mal Ja sagen Müsen.</p>
 
     <h2>2. Vertragspartner</h2>
     <p>Der Kaufvertrag kommt zustande mit:<br>
